Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-02-17 (SVN):
    * Updated 1.5.0 release notes file. Changed beta version date stamp
      to 2011-02-17.

2011-02-17 (SVN):
    * snd_mpg123.c: Print a message if mpg123_init() fails.

2011-02-17 (SVN):
    * README.music: update the document for the -noextmusic command line
      option and the bgm_extmusic cvar.

2011-02-17 (SVN):
    * model.c, gl_model.c: changed the `ignored' messages from Con_DPrintf
      to Con_Printf for external lit and ent files.

2011-02-16 (SVN):
    * bgmusic.c: small updates and tidy-ups.

2011-02-16 (SVN):
    * w32stuff/codecs: add libmpg123 header, import libraries and dlls
      for windows builds in case they use libmpg123 for mp3 support.
    * w32stuff/dxsdk: update _mingw_dxhelper.h from mingw-w64 svn repo.

2011-02-16 (SVN):
    * bgmusic.c: drop support for track<nn> music file search. change the
      music file search method to prioritize searchpath order as opposed
      to preferred file format order. add support for -noextmusic command
      line option and bgm_extmusic cvar from quakespasm.
    * bgmusic.h: add an extern for bgm_extmusic.
    * README.music: update the document after these changes.

2011-02-16 (SVN):
    * quakefs.h: minor tidy-up.

2011-02-15 (SVN):
    * bgmusic.c: some reorganization without any actual code change.
      (BGM_PlayCDtrack): added new procedure from the quakespasm version
      of the file. not actually used in hexen2, at least not yet, only
      for reference.
    * bgmusic.h (BGM_PlayCDtrack): added prototype.

2011-02-14 (SVN):
    * snd_mpg123.c: added new codec for mp3 playback using libmpg123 as
      an alternative to the existing one using libmad. requires at least
      mpg123-1.12.0, i.e. api version 25.

2011-02-12 (SVN):
    * sys_unix.c, sys_win.c, sys_dos.c: added Sys_rename().
    * sys.h: added prototype for Sys_rename().